# instagram-stats

./: .gitignore  README.md  app.py  instagram_stats.py  pyproject.toml  requirements-streamlit.txt  requirements.txt  streamlit_app.py  test_instagram.py
modules/: custom_logger_formatter.py  instaloader_rate_controller.py
utils/: constants.py  misc.py
