[tool.poetry]
name = "instagram-stats"
version = "0.1.0"
description = ""
authors = ["Guilherme <guimorone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
instaloader = "^4.11"
pandas = "^2.2.2"
pick = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
